- increase default linux raid chunk size from 64 to 512KB

Version 16.62 - 19 February 2015

- diskdrake (mga#12422, mga#11988, mga#14839, mga#15272, mga#15264):
  o use an horizontal scrolling bar when needed
  o workaround too wide togglebuttons with empty label with gtk+3 and/or Adwaita
- library (for draklive-install):
  o use a vertical scrolling bar when needed (mga#15272)

Version 16.56 - 10 February 2015
- i18n: Use the x-distro /etc/locale.conf file instead of /etc/sysconfig/i18n
- drakedm: Do not use ancient dm init script to restart DM
- service_harddrake:
  * add support for the new nvidia340 driver (mga#15255)
  * drop references to old unsupported nVidia drivers

Version 16.55 - 9 February 2015

- drakclock: Ensure that /etc/localtime is a symlink (mga#14888)
- users: Make sure to restart accounts-daemon after adding users (mga#15113, mga#14476)
- i18n: Write the desired console font to /etc/vconsole.conf
- drakedm: Do not use ancient dm init script to restart DM
- switch from oxygen-gtk to Adwaita theme

Version 16.52 - 5 February 2015

- libDrakX/fsedit.pm: new "simple" partitioning scheme
  o create separate /home only when more than 50G are available
  o in such case, / is 6/19th of the available space up to 50G,
    swap is 1/19th up to 4G and /home is the rest (12/19th)
  o https://ml.mageia.org/l/arc/dev/2014-12/msg00330.html
- recognize new kernel-3.19 drivers
- fix GPT initialization on empty disk

Version 16.50 - 9 January 2015

- add UEFI support

Version 16.49 - 20 December 2014
 
- recognize new kernel-3.18 drivers (mga#14799)

- drakboot:
  o do not crash if fstab contains a bind mount on a file (mga#14657)

Version 16.46 - 25 November 2014

- harddrake:
  o recognize e17/lxde/mate/razor (mga#12495, Luc Menut)
- split drakbug support in its own module (mga#14565)

Version 16.44 - 23 October 2014

- fix drakxservices not showing all services due to systemctl output change
- draksound