@@ -1,3 +1,6 @@
+- partitioning:
+  o fix too wide buttons (mga#12422, mga#13471, mga#14839, mga#15379)
+
 Version 16.62 - 19 February 2015
 
 - partitioning (mga#12422, mga#11988, mga#14839, mga#15272, mga#15264):
