@@ -1,3 +1,5 @@
+- diskdrake:
+  o fix too wide buttons (mga#12422, mga#13471, mga#14839, mga#15379)
 - increase default linux raid chunk size from 64 to 512KB
 
 Version 16.62 - 19 February 2015
